Added Module, Page API documentation
